# MastersThesis

./: .gitignore  HestonModelSwift.aux  HestonModelSwift.bbl  HestonModelSwift.blg  HestonModelSwift.out  HestonModelSwift.tex  HestonModelSwift.toc  README.md  bibli.bib  biblio.bib  mammeTFM.cls
Plantilla/: authorfile.tex  mammeTFM.cls
Plantilla/__MACOSX/: ._authorfile.tex  ._mammeTFM.cls  ._sfmath.sty
Presentation/: SWIFTCalibration [Autosaved].pptx  SWIFTCalibration.pptx
Programming/: CMakeLists_old.txt
Programming/ConsoleTest/: ConsoleTest.cpp  distributions.h  heston.h  my_math.h  swift.h
Programming/Exec/: CMakeLists.txt  libfftw3-3.exp  libfftw3-3.lib  main.cpp  math.h  swift.h
Programming/FFTW3/: CMakeLists.txt  include_fftw3.h
Programming/FFTW3/UnitTests/: CMakeLists.txt  fftw3.cpp
Programming/LEVMAR/: CMakeLists.txt
Programming/LEVMAR/LEVMAR_DEMO/: CMakeLists.txt
Programming/Levmar/: CMakeLists.txt  include_levmar.h
Programming/Levmar/UnitTests/: CMakeLists.txt
Programming/SWIFT/: CMakeLists.txt  HestonCalibrator.cpp  c_m_calculators.cpp  c_m_calculators.h  density_coefficients_calculators.cpp  density_coefficients_calculators.h  distributions.cpp  distributions.h  heston_deprecated.h  known_distribution_contract_combinations.h  library.cpp  library.h  my_math.h  option_contracts.cpp  option_contracts.h  payoff_coefficients_calculators.cpp  swift.cpp  swift.h
Programming/SWIFT/Reports/: cui_report.csv  heston_report.csv
Programming/SWIFT/UnitTests/: CMakeLists.txt  c_m_calculators.cpp  contract_distribution_jacobians.cpp  distributions.cpp  equivalences.cpp  main.cpp  my_math.cpp  option_contracts.cpp  option_pricing.cpp  payoff_calculators.cpp  swift.cpp  test_against_luis_paper.cpp
Programming/SWIFT/Z_Exec_CallibrateBS/: callibrate_bs.cpp
Programming/SWIFT/Z_Exec_CharReports/: CMakeLists.txt  char_reports.cpp
Programming/SWIFT/Z_Exec_CuiExperiment/: cui_experiment.cpp
Programming/SWIFT/Z_Exec_CuiExperimentOriginal/: CMakeLists.txt  cui_experiment_original.cpp
Programming/SWIFT/Z_Exec_HestonPricing/: CMakeLists.txt  heston_pricing.cpp
Programming/SWIFT/Z_Exec_OrtizExperimentOriginal/: CMakeLists.txt  luis_experiment_heston.cpp  luis_experiment_original.cpp
Programming/SWIFT/Z_Exec_ProfileAgainstOrtiz/: CMakeLists.txt  profile.cpp
Programming/Test/UnitTests/: main.cpp
Programming2/FFTW3/UnitTests/: fftw3.cpp  main.cpp
Programming2/SWIFT/: CMakeLists.txt  c_m_calculators.h  distributions.h  known_distribution_contract_combinations.h  my_math.h  option_contracts.cpp  swift.h
Programming2/SWIFT/Reports/: cui_report.csv
Programming2/SWIFT/UnitTests/: CMakeLists.txt  c_m_calculators.cpp  distributions.cpp  my_math.cpp  option_pricing.cpp  swift.cpp
Programming2/SWIFT/Z_Exec_CharReports/: char_reports.cpp
Programming2/SWIFT/Z_Exec_HestonPricing/: heston_pricing.cpp
