cmake_minimum_required(VERSION 3.15)
#set(CMAKE_CXX_COMPILER "C:\\Program Files (x86)\\mingw-w64\\i686-8.1.0-posix-dwarf-rt_v6-rev0\\mingw32\\bin\\")
#set(CMAKE_C_COMPILER "C:\\Program Files (x86)\\mingw-w64\\i686-8.1.0-posix-dwarf-rt_v6-rev0\\mingw32\\bin\\")

project(Exec)

set(CMAKE_CXX_STANDARD 17)
set(MY_ROOT "D:\\GoogleDrive\\TFM\\Exec")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "D:\\GoogleDrive\\TFM\\Exec\\FindFFTW/findFFTW")

set(BOOST_ROOT C:\\Program\ Files\\boost\\boost_1_71_0)
#set(FFTW_ROOT "D:\\Downloads\\fftw64")
#set(FFTW_INCLUDE_DIRS "D:\\Downloads\\fftw64\\")
message(${BOOST_ROOT})
#message(${FFTW_INCLUDE_DIRS})
find_package(Boost 1.71.0 REQUIRED #[[COMPONENTS system]])
#find_package(FFTW REQUIRED COMPONENTS DOUBLE_LIB)
#message(${FFTW_FOUND})
#message(${FFTW_LIBRARIES})
#message(${FFTW_FLOAT_LIB})
#message(${FFTW_INCLUDE_DIRS})

#add_library(${FFTW_INCLUDE_DIRS}\\libfftw3-3f.dll SHARED IMPORTED)
#add_library(DLL SHARED IMPORTED)
#message(${MY_ROOT})
#set_property(TARGET DLL PROPERTY IMPORTED_LOCATION ${FFTW_INCLUDE_DIRS}\\libfftw3-3.dll)
#add_library(${FFTW_INCLUDE_DIRS}\\libfftw3-3l.dll SHARED IMPORTED)
#include_directories(${FFTW_INCLUDE_DIRS})

#add_library(fftw3-3lib SHARED IMPORTED)
#message(${MY_ROOT}\\libfftw3-3.lib)
#set_property(TARGET fftw3-3lib PROPERTY IMPORTED_LOCATION ${MY_ROOT}\\libfftw3-3.lib)
add_executable(${PROJECT_NAME} main.cpp swift.h math.h fftw3.h)
#target_link_libraries(${PROJECT_NAME} libfftw3-3lib)
#message(${FFTW_INCLUDE_DIRS})
target_include_directories(${PROJECT_NAME} PRIVATE ${Boost_INCLUDE_DIRS} #[[${FFTW_INCLUDE_DIRS}]])